// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should render banner with login correctly 1`] = `
<Banner
  side="Login"
>
  <div
    className="banner"
  >
    <div
      className="banner__slogan"
    >
      <div>
        <h1
          className="banner__yellow-text hidden-on-mobile"
        >
          The place 
          <br />
           writers love...
        </h1>
        <h1>
          <span
            className="banner__yellow-text-mobile"
          >
            Great writers,
          </span>
          <br />
          Quality Content
        </h1>
        <button>
          Get Started
        </button>
      </div>
    </div>
    <div
      className="banner__screen"
    >
      <_default>
        <p>
          This is the Login Component
        </p>
      </_default>
    </div>
  </div>
</Banner>
`;

exports[`Should render banner with signup correctly 1`] = `
<Banner
  side="Signup"
>
  <div
    className="banner"
  >
    <div
      className="banner__slogan"
    >
      <div>
        <h1
          className="banner__yellow-text hidden-on-mobile"
        >
          The place 
          <br />
           writers love...
        </h1>
        <h1>
          <span
            className="banner__yellow-text-mobile"
          >
            Great writers,
          </span>
          <br />
          Quality Content
        </h1>
        <button>
          Get Started
        </button>
      </div>
    </div>
    <div
      className="banner__screen"
    >
      <_default>
        <p>
          This is the Signup Component
        </p>
      </_default>
    </div>
  </div>
</Banner>
`;

exports[`Should render banner with stats correctly 1`] = `
<Banner
  side="Stats"
>
  <div
    className="banner"
  >
    <div
      className="banner__slogan"
    >
      <div>
        <h1
          className="banner__yellow-text hidden-on-mobile"
        >
          The place 
          <br />
           writers love...
        </h1>
        <h1>
          <span
            className="banner__yellow-text-mobile"
          >
            Great writers,
          </span>
          <br />
          Quality Content
        </h1>
        <button>
          Get Started
        </button>
      </div>
    </div>
    <div
      className="banner__screen"
    >
      <Stats>
        <div
          className="stats"
        >
          <div
            className="stats__numbers stats__numbers--writers"
          >
            <div>
              <h2
                className="banner__off-white-text"
              >
                Connect with
              </h2>
              <h2>
                <span
                  className="banner__yellow-text"
                >
                  100000+ 
                </span>
                <span
                  className="banner__off-white-text"
                >
                  writers
                </span>
              </h2>
            </div>
          </div>
          <div
            className="stats__top-authors"
          >
            <div>
              <h1
                className="hidden-on-mobile"
              >
                Join these 
                <br />
                 successful writers
              </h1>
              <div
                className="stats__top-authors__authors"
              >
                <div
                  className="author"
                >
                  <img
                    alt="Omoefe"
                    src="/assets/images/author1.png"
                  />
                  <div>
                    <h3>
                      Omoefe
                    </h3>
                    <p>
                      <span
                        className="banner__yellow-text"
                      >
                        674+
                      </span>
                       articles
                    </p>
                    <p>
                      <span
                        className="banner__yellow-text"
                      >
                        783+
                      </span>
                       followers
                    </p>
                  </div>
                </div>
                <div
                  className="author"
                >
                  <img
                    alt="Ibidapo"
                    src="/assets/images/author2.png"
                  />
                  <div>
                    <h3>
                      Ibidapo
                    </h3>
                    <p>
                      <span
                        className="banner__yellow-text"
                      >
                        60+
                      </span>
                       articles
                    </p>
                    <p>
                      <span
                        className="banner__yellow-text"
                      >
                        45+
                      </span>
                       followers
                    </p>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            className="stats__numbers stats__numbers--readers"
          >
            <div>
              <h2
                className="banner__off-white-text"
              >
                Publish to
              </h2>
              <h2>
                <span
                  className="banner__yellow-text"
                >
                  344555+ 
                   
                </span>
                <span
                  className="banner__off-white-text"
                >
                  readers
                </span>
              </h2>
            </div>
          </div>
        </div>
      </Stats>
    </div>
  </div>
</Banner>
`;
